# Projeto_Base_Jogo_IP

./: .gitignore  CMakeLists.txt  Makefile  index.c  inst.sh  readme.md  test.sh
